[package]
name = "controller"
version = "0.1.0"
authors = ["Ole Martin Ruud <barskern@outlook.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.3.0", features = ["mysql", "r2d2"] }
dotenv = "0.10"
log = "0.4.5"
fern = "0.5.6"
chrono = "0.4.6"
clap = "2.32.0"
serde = "1.0"
serde_derive = "1.0.79"
tarpc = { git = "https://github.com/google/tarpc.git", branch = "master" }
tarpc-plugins = { git = "https://github.com/google/tarpc", rev = "5e4b97e" }
tokio-core = "0.1.17"
futures = "0.1.24"
futures-cpupool = "0.1.8"